@@ -1,14 +1,12 @@
 package com.atlassian.oai.validator.schema;
 
-import com.atlassian.oai.validator.report.JsonValidationReportFormat;
 import com.atlassian.oai.validator.report.LevelResolver;
 import com.atlassian.oai.validator.report.MessageResolver;
-import com.atlassian.oai.validator.report.SimpleValidationReportFormat;
 import com.atlassian.oai.validator.report.ValidationReport;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.cache.LoadingCache;
-import com.google.common.collect.ImmutableList;
+import com.github.benmanes.caffeine.cache.LoadingCache;
+
 import io.swagger.parser.OpenAPIParser;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.media.ArraySchema;
@@ -21,7 +19,8 @@ import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.media.StringSchema;
 import io.swagger.v3.oas.models.media.UUIDSchema;
 import io.swagger.v3.parser.core.models.ParseOptions;
-import org.junit.Test;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 import java.lang.reflect.Field;
 import java.util.List;
@@ -32,14 +31,11 @@ import static com.atlassian.oai.validator.schema.SchemaValidator.ADDITIONAL_PROP
 import static com.atlassian.oai.validator.util.ValidatorTestUtil.assertFailWithoutContext;
 import static com.atlassian.oai.validator.util.ValidatorTestUtil.assertPass;
 import static java.util.Collections.singletonList;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.iterableWithSize;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -47,12 +43,12 @@ public class SchemaValidatorTest {
 
     private final SchemaValidator classUnderTest = validator("/oai/v2/api-users.json");
 
-    @Test(expected = NullPointerException.class)
+    @Test
     public void validate_withNullValue_shouldThrowException() {
         final String value = null;
         final Schema schema = new Schema();
 
-        classUnderTest.validate(value, schema, "prefix");
+        assertThrows(NullPointerException.class, () -> classUnderTest.validate(value, schema, "prefix"));
     }
 
     @Test
@@ -82,7 +78,7 @@ public class SchemaValidatorTest {
 
     @Test
     public void validate_withNullSchema_shouldValidateAnyJson() {
-        final List<String> values = ImmutableList.of("1", "\"string\"", "{\"prop\":3}", "[1,2,3]", "null");
+        final List<String> values = List.of("1", "\"string\"", "{\"prop\":3}", "[1,2,3]", "null");
 
         values.forEach(v -> assertPass(classUnderTest.validate(v, null, "prefix")));
     }
@@ -285,11 +281,12 @@ public class SchemaValidatorTest {
                 "validation.prefix.schema.processingError");
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void validate_withOtherException_shouldFail() {
         final OpenAPI mockApi = mock(OpenAPI.class);
         when(mockApi.getComponents()).thenThrow(new IllegalStateException("Testing exception handling"));
-        new SchemaValidator(mockApi, new MessageResolver());
+        assertThrows(IllegalStateException.class, () -> new SchemaValidator(mockApi, new MessageResolver(),
+                new ValidationConfiguration()));
     }
 
     @Test
@@ -312,12 +309,7 @@ public class SchemaValidatorTest {
         final String value = "{\"firstname\":\"user_firstname\", \"city\":1}";
 
         final ValidationReport report = classUnderTest.validate(value, schema, "prefix");
-        assertFailWithoutContext(report, "validation.prefix.schema.allOf");
-
-        final ValidationReport.Message message = report.getMessages().get(0);
-        assertThat(message.getAdditionalInfo(), iterableWithSize(2));
-        assertThat(message.getAdditionalInfo(), hasItem(containsString("/components/schemas/User/allOf/0")));
-        assertThat(message.getAdditionalInfo(), hasItem(containsString("/components/schemas/User/allOf/1")));
+        assertFailWithoutContext(report, "validation.prefix.schema.required", "validation.prefix.schema.type");
     }
 
     @Test
@@ -527,6 +519,7 @@ public class SchemaValidatorTest {
         assertPass(classUnderTest.validate(value, schema, "prefix"));
     }
 
+    @Disabled("Ignore this test because networknt does not support such discriminator validation")
     @Test
     public void validate_withDiscriminator_shouldFail_whenInvalid() {
 
@@ -538,6 +531,7 @@ public class SchemaValidatorTest {
                 "validation.prefix.schema.discriminator");
     }
 
+    @Disabled("Ignore this test because networknt does not support such discriminator validation")
     @Test
     public void validate_withDiscriminator_shouldFail_everyTime_whenInvokedMultipleTimes() {
 
@@ -753,7 +747,7 @@ public class SchemaValidatorTest {
         final String value = "{\"id\": \"test\", \"notReadOnly\":\"abc\", \"writeOnly\":\"123\"}";
 
         assertFailWithoutContext(classUnderTest.validate(value, schema, "response.body"),
-                "validation.response.body.schema.allOf");
+                "validation.response.body.schema.required");
     }
 
     @Test
@@ -848,7 +842,7 @@ public class SchemaValidatorTest {
         final String value = "{\"id\": \"test\", \"notReadOnly\":\"abc\", \"readOnly\":\"123\"}";
 
         assertFailWithoutContext(classUnderTest.validate(value, schema, "request.body"),
-                "validation.request.body.schema.allOf");
+                "validation.request.body.schema.required");
     }
 
     @Test
@@ -877,13 +871,13 @@ public class SchemaValidatorTest {
         assertFailWithoutContext(reportShallow);
         assertFailWithoutContext(reportDeep);
 
-        final String expectedSimpleFormatError = "Instance value (\"Doggo\") not found in enum";
-        assertTrue(SimpleValidationReportFormat.getInstance().apply(reportShallow).contains(expectedSimpleFormatError));
-        assertTrue(SimpleValidationReportFormat.getInstance().apply(reportDeep).contains(expectedSimpleFormatError));
+        final String expectedSimpleFormatError = "validation.response.body.schema.enum";
+        assertTrue(reportShallow.getMessages().stream().anyMatch(m -> m.getKey().equals(expectedSimpleFormatError)));
+        assertTrue(reportDeep.getMessages().stream().anyMatch(m -> m.getKey().equals(expectedSimpleFormatError)));
 
-        final String expectedJsonFormatError = "Instance value (\\\"Doggo\\\") not found in enum";
-        assertTrue(JsonValidationReportFormat.getInstance().apply(reportShallow).contains(expectedJsonFormatError));
-        assertTrue(JsonValidationReportFormat.getInstance().apply(reportDeep).contains(expectedJsonFormatError));
+        final String expectedJsonFormatError = "validation.response.body.schema.enum";
+        assertTrue(reportShallow.getMessages().stream().anyMatch(m -> m.getKey().equals(expectedJsonFormatError)));
+        assertTrue(reportDeep.getMessages().stream().anyMatch(m -> m.getKey().equals(expectedJsonFormatError)));
     }
 
     @Test
@@ -937,7 +931,7 @@ public class SchemaValidatorTest {
         assertPass(tester.validate(value, schema, "prefix"));
         final LoadingCache jsonSchemaCache1 = (LoadingCache) jsonSchemaField.get(tester);
         assertNotNull(jsonSchemaCache1);
-        assertEquals(jsonSchemaCache1.size(), 1);
+        assertEquals(jsonSchemaCache1.estimatedSize(), 1);
 
         final String value1 = "{\"foo\":\"bar\"}";
         final Schema schema1 = new ObjectSchema()
@@ -946,7 +940,7 @@ public class SchemaValidatorTest {
         assertPass(tester.validate(value1, schema1, "prefix"));
         final LoadingCache jsonSchemaCache2 = (LoadingCache) jsonSchemaField.get(tester);
         assertNotNull(jsonSchemaCache2);
-        assertEquals(jsonSchemaCache2.size(), 2);
+        assertEquals(jsonSchemaCache2.estimatedSize(), 2);
     }
 
     private Map<String, Schema> getSchemasFrom(final String api) {
@@ -971,7 +965,11 @@ public class SchemaValidatorTest {
     private SchemaValidator validator(final String api) {
         final ParseOptions parseOptions = new ParseOptions();
         parseOptions.setResolve(true);
-        return new SchemaValidator(new OpenAPIParser().readLocation(api, null, parseOptions).getOpenAPI(), new MessageResolver());
+        final OpenAPI parsedApi = new OpenAPIParser().readLocation(api, null, parseOptions).getOpenAPI();
+        final MessageResolver messageResolver = new MessageResolver();
+        final ValidationConfiguration validationConfiguration = new ValidationConfiguration();
+
+        return new SchemaValidator(parsedApi, messageResolver, validationConfiguration);
     }
 
     private SchemaValidator validatorWithCacheSize(final String api, final int cacheSize) {
@@ -980,7 +978,7 @@ public class SchemaValidatorTest {
         final ValidationConfiguration validationConfiguration = new ValidationConfiguration();
         validationConfiguration.setMaxCacheSize(cacheSize);
         return new SchemaValidator(new OpenAPIParser().readLocation(api, null, parseOptions).getOpenAPI(), new MessageResolver(),
-            SwaggerV20Library::schemaFactory, validationConfiguration);
+            validationConfiguration);
     }
 
     private SchemaValidator validatorWithResolveCombinators(final String api) {
