@@ -1,13 +1,12 @@
 package com.atlassian.oai.validator.example.exceptionhandler;
 
-import com.google.common.collect.ImmutableMap;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.resttestclient.autoconfigure.AutoConfigureRestTestClient;
+import org.springframework.test.web.servlet.client.RestTestClient;
+import org.springframework.test.web.servlet.client.EntityExchangeResult;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -25,22 +24,22 @@ import static java.util.Collections.singletonList;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 
+@AutoConfigureRestTestClient
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT,
-        properties = {"server.error.include-message=always"})
+        properties = {"spring.web.error.include-message=always"})
 public class RestRequestValidationTest {
 
     @Autowired
-    private TestRestTemplate restTemplate;
+    private RestTestClient restTestClient;
 
     @Test
     public void testGet_success() {
-        final Map<String, List<String>> additionalHeaders = ImmutableMap
-                .of("headerValue", Arrays.asList("valueHeader"));
+        final Map<String, List<String>> additionalHeaders = Map.of("headerValue", Arrays.asList("valueHeader"));
         final ResponseEntity<HashMap> response = restRequest("/spring/variablePath?requestParam=paramRequest",
                 HttpMethod.GET, null /* no body */, additionalHeaders);
 
         // then: 'the response contains the header, path variable and query parameter'
-        final Map<String, Object> expectedBody = ImmutableMap.of("headerValue", "valueHeader",
+        final Map<String, Object> expectedBody = Map.of("headerValue", "valueHeader",
                 "pathVariable", "variablePath",
                 "requestParam", "paramRequest");
         assertOkRequest(response, expectedBody);
@@ -57,8 +56,7 @@ public class RestRequestValidationTest {
 
     @Test
     public void testGet_invalidResponse() {
-        final Map<String, List<String>> additionalHeaders = ImmutableMap
-                .of("headerValue", singletonList("valueHeader"));
+        final Map<String, List<String>> additionalHeaders = Map.of("headerValue", singletonList("valueHeader"));
         final ResponseEntity<HashMap> response = requestWithInvalidResponse("/spring/variablePath?requestParam=paramRequest",
                 HttpMethod.GET, null /* no body */, additionalHeaders);
 
@@ -68,8 +66,8 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPost_success() {
-        final Map<String, Object> sendBody = ImmutableMap.of("string", "text",
-                "integer", 1022, "object", ImmutableMap.of("boolean", true));
+        final Map<String, Object> sendBody = Map.of("string", "text",
+                "integer", 1022, "object", Map.of("boolean", true));
         final ResponseEntity<HashMap> response = restRequest(
                 "/spring", HttpMethod.POST, sendBody);
 
@@ -79,7 +77,7 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPost_invalidRequest() {
-        final Map<String, Object> sendBody = ImmutableMap.of("integer", "noInteger");
+        final Map<String, Object> sendBody = Map.of("integer", "noInteger");
         final ResponseEntity<HashMap> response = restRequest("/spring",
                 HttpMethod.POST, sendBody);
 
@@ -90,8 +88,8 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPost_invalidResponse() {
-        final Map<String, Object> sendBody = ImmutableMap.of("string", "text",
-                "integer", 1022, "object", ImmutableMap.of("boolean", true));
+        final Map<String, Object> sendBody = Map.of("string", "text",
+                "integer", 1022, "object", Map.of("boolean", true));
         final ResponseEntity<HashMap> response = requestWithInvalidResponse(
                 "/spring", HttpMethod.POST, sendBody, emptyMap());
 
@@ -105,19 +103,19 @@ public class RestRequestValidationTest {
                 "/spring/post/blob", HttpMethod.POST, "bytes".getBytes(StandardCharsets.UTF_8));
 
         // then: 'the response contains the size of the send blob'
-        final Map<String, Object> expectedBody = ImmutableMap.of("size", 5);
+        final Map<String, Object> expectedBody = Map.of("size", 5);
         assertOkRequest(response, expectedBody);
     }
 
     @Test
     public void testPut_success() {
-        final Map<String, Object> sendBody = ImmutableMap.of("putValue", "valuePut");
+        final Map<String, Object> sendBody = Map.of("putValue", "valuePut");
         final ResponseEntity<HashMap> response = restRequest("/spring/variablePath",
                 HttpMethod.PUT, sendBody);
 
         // then: 'the response contains a copy of the request including the path parameter'
-        final Map<String, Object> expectedBody = ImmutableMap.<String, Object>builder()
-                .putAll(sendBody).put("pathVariable", "variablePath").build();
+        final Map<String, Object> expectedBody = new java.util.HashMap<>(sendBody);
+        ((java.util.HashMap<String, Object>) expectedBody).put("pathVariable", "variablePath");
         assertOkRequest(response, expectedBody);
     }
 
@@ -131,7 +129,7 @@ public class RestRequestValidationTest {
 
     @Test
     public void testPut_invalidResponse() {
-        final Map<String, Object> sendBody = ImmutableMap.of("putValue", "valuePut");
+        final Map<String, Object> sendBody = Map.of("putValue", "valuePut");
         final ResponseEntity<HashMap> response = requestWithInvalidResponse("/spring/variablePath",
                 HttpMethod.PUT, sendBody, emptyMap());
 
@@ -169,35 +167,48 @@ public class RestRequestValidationTest {
     }
 
     private ResponseEntity<HashMap> restRequest(final String uri, final HttpMethod method, final Object body) {
-        return restRequest(uri, method, body, ImmutableMap.of());
+        return restRequest(uri, method, body, Map.of());
     }
 
     private ResponseEntity<HashMap> restRequest(final String uri, final HttpMethod method, final Object body,
                                                 final Map<String, List<String>> additionalHeader) {
-        final HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(singletonList(MediaType.APPLICATION_JSON));
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.putAll(additionalHeader);
-        final HttpEntity<Object> entity = new HttpEntity<>(body, headers);
-        return restTemplate.exchange(uri, method, entity, HashMap.class);
+        final EntityExchangeResult<HashMap> result = restTestClient.method(method).uri(uri)
+                .accept(MediaType.APPLICATION_JSON)
+                .headers(headers -> {
+                    headers.setContentType(MediaType.APPLICATION_JSON);
+                    additionalHeader.forEach((key, values) -> headers.addAll(key, values));
+                })
+                .body(body != null ? body : "")
+                .exchange()
+                .expectBody(HashMap.class)
+                .returnResult();
+        return new ResponseEntity<>(result.getResponseBody(), result.getResponseHeaders(), result.getStatus());
     }
 
     private ResponseEntity<HashMap> requestWithInvalidResponse(final String uri, final HttpMethod method,
                                                                final Object body, final Map<String, List<String>> additionalHeader) {
-        final HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(singletonList(MediaType.APPLICATION_JSON));
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.putAll(additionalHeader);
-        headers.put("invalidResponse", singletonList("true"));
-        final HttpEntity<Object> entity = new HttpEntity<>(body, headers);
-        return restTemplate.exchange(uri, method, entity, HashMap.class);
+        final EntityExchangeResult<HashMap> result = restTestClient.method(method).uri(uri)
+                .accept(MediaType.APPLICATION_JSON)
+                .headers(headers -> {
+                    headers.setContentType(MediaType.APPLICATION_JSON);
+                    additionalHeader.forEach((key, values) -> headers.addAll(key, values));
+                    headers.add("invalidResponse", "true");
+                })
+                .body(body != null ? body : "")
+                .exchange()
+                .expectBody(HashMap.class)
+                .returnResult();
+        return new ResponseEntity<>(result.getResponseBody(), result.getResponseHeaders(), result.getStatus());
     }
 
     private ResponseEntity<HashMap> octetStreamRequest(final String uri, final HttpMethod method, final Object body) {
-        final HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(singletonList(MediaType.APPLICATION_JSON));
-        final HttpEntity<Object> entity = new HttpEntity<>(body, headers);
-        return restTemplate.exchange(uri, method, entity, HashMap.class);
+        final EntityExchangeResult<HashMap> result = ((RestTestClient.RequestBodySpec) restTestClient.method(method).uri(uri))
+                .accept(MediaType.APPLICATION_JSON)
+                .body(body)
+                .exchange()
+                .expectBody(HashMap.class)
+                .returnResult();
+        return new ResponseEntity<>(result.getResponseBody(), result.getResponseHeaders(), result.getStatus());
     }
 
     private void assertOkRequest(final ResponseEntity<HashMap> response, final Map<String, Object> body) {
@@ -206,9 +217,10 @@ public class RestRequestValidationTest {
     }
 
     private void assertBadRequest(final ResponseEntity<HashMap> response, final String... expectedMessageKeys) {
-        assertThat(response.getStatusCode(), equalTo(HttpStatus.UNPROCESSABLE_ENTITY));
+        assertThat(response.getStatusCode(), equalTo(HttpStatus.UNPROCESSABLE_CONTENT));
         final List<String> messageKeys = ((List<HashMap>) response.getBody().get("messages")).stream()
                 .map(map -> (String) map.get("key"))
+                .distinct()
                 .collect(Collectors.toList());
         assertThat(messageKeys, Matchers.containsInAnyOrder(expectedMessageKeys));
     }
@@ -217,6 +229,7 @@ public class RestRequestValidationTest {
         assertThat(response.getStatusCode(), equalTo(HttpStatus.INTERNAL_SERVER_ERROR));
         final List<String> messageKeys = ((List<HashMap>) response.getBody().get("messages")).stream()
                 .map(map -> (String) map.get("key"))
+                .distinct()
                 .collect(Collectors.toList());
         assertThat(messageKeys, Matchers.containsInAnyOrder(expectedMessageKeys));
     }
